# docs/swagger.json
@@ -1,16 +1,22 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API sederhana untuk manajemen categories di kasir",
+        "description": "API untuk aplikasi manajemen kasir yang di-update dengan menggunakan database PostgreSQL. Terdapat penambahan endpoint untuk mengelola kategori produk serta relasi antara produk dan kategori.",
         "title": "Kasir API",
         "contact": {},
-        "version": "1.0"
+        "version": "1.0.1"
     },
     "paths": {
-        "/api/categories": {
+        "/api/kategori": {
             "get": {
-                "description": "Mengambil semua data categories",
-                "summary": "Get all Categories",
+                "description": "Mengambil semua data kategori produk (Challange (Optional))",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get All Categories",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -20,22 +26,70 @@
                                 "$ref": "#/definitions/models.Categories"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Failed to get categories",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
         },
-        "/api/categories/": {
-            "post": {
-                "description": "Menambahkan data categories baru",
-                "summary": "Create new Categories",
+        "/api/produk": {
+            "get": {
+                "description": "Mengambil semua data produk. Terdapat opsi untuk mendapatkan detail kategori produk",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get All Products",
                 "parameters": [
                     {
-                        "description": "New Categories Data",
-                        "name": "categories",
+                        "type": "boolean",
+                        "default": false,
+                        "description": "Tampilkan Detail Kategori Produk",
+                        "name": "details",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Product"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to get products",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Menambahkan data produk baru, data yang perlu diisi: { category_id, name, price, stock }",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create New Product",
+                "parameters": [
+                    {
+                        "description": "New Product Data",
+                        "name": "product",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Categories"
+                            "$ref": "#/definitions/models.Product"
                         }
                     }
                 ],
@@ -43,11 +97,17 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Categories"
+                            "$ref": "#/definitions/models.Product"
                         }
                     },
                     "400": {
-                        "description": "Invalid request",
+                        "description": "Invalid request body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to create product",
                         "schema": {
                             "type": "string"
                         }
@@ -55,34 +115,47 @@
                 }
             }
         },
-        "/api/categories/{id}": {
+        "/api/produk/{id}": {
             "get": {
-                "description": "Mengambil data categories berdasarkan ID",
-                "summary": "Get Categories by ID",
+                "description": "Mengambil data produk berdasarkan ID. Terdapat opsi untuk mendapatkan detail kategori produk",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get Product by ID",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Categories ID",
+                        "description": "Product ID",
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "default": false,
+                        "description": "Tampilkan Detail Kategori Produk",
+                        "name": "details",
+                        "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Categories"
+                            "$ref": "#/definitions/models.Product"
                         }
                     },
                     "400": {
-                        "description": "Invalid Categories ID",
+                        "description": "Invalid product ID",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Categories tidak ditemukan",
+                        "description": "Product not found",
                         "schema": {
                             "type": "string"
                         }
@@ -90,23 +163,29 @@
                 }
             },
             "put": {
-                "description": "Memperbarui data categories berdasarkan ID",
-                "summary": "Update Categories by ID",
+                "description": "Memperbarui data produk berdasarkan ID, data yang dapat diubah: { category_id, name, price, stock }",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Update Product by ID",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Categories ID",
+                        "description": "Product ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Updated Categories Data",
-                        "name": "categories",
+                        "description": "Updated Product Data",
+                        "name": "product",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Categories"
+                            "$ref": "#/definitions/models.Product"
                         }
                     }
                 ],
@@ -114,11 +193,17 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Categories"
+                            "$ref": "#/definitions/models.Product"
                         }
                     },
                     "400": {
-                        "description": "Invalid request",
+                        "description": "Invalid request body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to update product",
                         "schema": {
                             "type": "string"
                         }
@@ -126,12 +211,12 @@
                 }
             },
             "delete": {
-                "description": "Menghapus data categories berdasarkan ID",
-                "summary": "Delete Categories by ID",
+                "description": "Menghapus data produk berdasarkan ID",
+                "summary": "Delete Product by ID",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Categories ID",
+                        "description": "Product ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -139,13 +224,22 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Categories berhasil dihapus",
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid product ID",
                         "schema": {
                             "type": "string"
                         }
                     },
-                    "400": {
-                        "description": "Invalid Categories ID",
+                    "500": {
+                        "description": "Failed to delete product",
                         "schema": {
                             "type": "string"
                         }
@@ -158,16 +252,33 @@
         "models.Categories": {
             "type": "object",
             "properties": {
-                "harga": {
+                "id": {
                     "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Product": {
+            "type": "object",
+            "properties": {
+                "category_id": {
+                    "type": "integer"
+                },
+                "category_name": {
+                    "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "nama": {
+                "name": {
                     "type": "string"
                 },
-                "stok": {
+                "price": {
+                    "type": "number"
+                },
+                "stock": {
                     "type": "integer"
                 }
             }
