# models/categories.go
@@ -2,15 +2,6 @@ package models
 
 // Registrasi tipe data Categories
 type Categories struct {
-	ID    int    `json:"id"`
-	Nama  string `json:"nama"`
-	Harga int    `json:"harga"`
-	Stok  int    `json:"stok"`
-}
-
-// Inisialisasi data produk
-var DataCategories = []Categories{
-	{ID: 1, Nama: "Indomie Godog", Harga: 3500, Stok: 10},
-	{ID: 2, Nama: "Vit 1000ml", Harga: 3000, Stok: 40},
-	{ID: 3, Nama: "Kecap", Harga: 12000, Stok: 20},
+	ID   int    `json:"id"`
+	Name string `json:"name"`
 }
