# models/product.go
@@ -1,0 +1,10 @@
+package models
+
+type Product struct {
+	ID           int     `json:"id"`
+	Name         string  `json:"name"`
+	Price        float64 `json:"price"`
+	Stock        int     `json:"stock"`
+	CategoryID   int     `json:"category_id,omitempty"`
+	CategoryName *string `json:"category_name,omitempty"`
+}
